# aiogram-loguru

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/aiogram_loguru/: __init__.py  aiogramsink.py
